# quiet_notification

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/quick_notification/: AppNotificationListenerService.kt  MainActivity.kt  NotificationListenerBridge.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/: Notification_store.dart  Websocket_manager.dart  android_notification_bridge.dart  app_preferences.dart  constants.dart  home_page.dart  models.dart  native_float_preview_windows.dart  notification_rules.dart  onboarding_flow.dart  onboarding_store.dart  preferences_store.dart  preview_popup.dart  preview_window.dart  preview_window_controller.dart  stats_sheet.dart  widgets.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
python_push/: push_notifications.py
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp  notification_native_popup.cc  notification_native_popup.h
