[package]
name = "quick_notification"
version = "0.1.0"
description = "通知助手"
authors = []
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "quick_notification_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
